# menu-management-api

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  desktop.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260423_0001_initial_schema.py  20260425_0002_one_open_price_per_item.py  20260425_0003_menu_archived_by.py
scripts/: seed.py  serve.py
src/app/: __init__.py  config.py  db.py  main.py
src/app/auth/: __init__.py  dependencies.py  jwt.py  passwords.py  router.py
src/app/models/: __init__.py  base.py  category.py  menu.py  menu_item.py  price.py  user.py
src/app/routers/: __init__.py  categories.py  menu_items.py  menus.py  prices.py
src/app/schemas/: __init__.py  auth.py  category.py  menu.py  menu_item.py  price.py  user.py
tests/: conftest.py  test_auth.py  test_categories.py  test_menu_items.py  test_menus.py  test_prices.py
